<resources>
    <string name="app_name">Movie</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating_value">0.0</string>
    <string name="description">Description</string>
    <string name="overview">Overview</string>
    <string name="default_genre">Action, Adventure</string>
    <string name="default_year">2021</string>
    <string name="title">Title</string>
    <string name="default_duration">1h 0m</string>
</resources>