<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.lopniv.TopCropImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/placeholder_header"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/bg_overlay">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_back"
                    android:background="@color/transparent"
                    android:tint="@color/orange_700"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textAllCaps="true"
                    android:text="@string/title"
                    android:textColor="@color/orange_700"
                    android:textSize="28sp"
                    android:fontFamily="@font/roboto_bolditalic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_grey"
                android:layout_below="@id/placeholder_header">

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/rating"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:numStars="1"
                    android:rating="1"
                    android:layout_marginStart="20dp"
                    app:mrb_fillBackgroundStars="true"
                    app:mrb_progressTint="@color/orange_700"
                    app:mrb_secondaryProgressTint="@color/orange_700" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/rating_value"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_toEndOf="@id/rating"
                    android:layout_marginStart="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/default_duration"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_toEndOf="@id/tv_score"
                    android:layout_marginStart="10dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/default_genre"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_italic"
                    android:layout_below="@id/tv_score"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/overview"
                    android:textColor="@color/orange_700"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_below="@id/tv_genre"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_below="@id/tv_overview"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
